package typed.entity;

message Turntable
{
	required uint64 guid				= 1;	// 占位符
	optional uint32 coin_pool			= 2;	// 奖金池	
	optional uint32 stage				= 3;	// 所处阶段 1:已结束, 2:正在进行
	
	message Record
	{
		required uint64	 player_guid	= 1;
		required string	 player_name	= 2;
		required uint32	 mode			= 3; //  1:单抽, 2:批量
		
		repeated uint32  item_ids		= 4;
		repeated uint32	 item_nums		= 5;
	}
	
	repeated Record  records			= 4;
}